--- a/glossary.html
+++ b/glossary.html
@@ -18,10 +18,10 @@
         </header>
         <main>
             <!--Add glossary terms here-->
-            <dl>
-                <dt>WCAG</dt>
-                <dd>Web Content Accessibility Guidelines</dd>
-            </dl>
+            <ul id="glossary-terms">
+                <li>WCAG - Web Content Accessibility Guidelines</li>
+                <li>WAI-ARIA - Web Accessibility Initiative – Accessible Rich Internet Applications</li>
+            </ul>
         </main>
     </body>        
 </html>
