--- a/glossary.html
+++ b/glossary.html
@@ -17,6 +17,7 @@
             </form>
         </header>
         <main>
+            <button id="sort-button">Sort (A-Z)</button>
             <!--Add glossary terms here-->
             <ul id="glossary-terms">
                 <li>WCAG - Web Content Accessibility Guidelines</li>
