--- a/glossary.html
+++ b/glossary.html
@@ -20,8 +20,14 @@
             <button id="sort-button">Sort (A-Z)</button>
             <!--Add glossary terms here-->
             <ul id="glossary-terms">
-                <li>WCAG - Web Content Accessibility Guidelines</li>
-                <li>WAI-ARIA - Web Accessibility Initiative – Accessible Rich Internet Applications</li>
+                <li>WCAG: Web Content Accessibility Guidelines</li>
+                <li>WAI-ARIA: Web Accessibility Initiative – Accessible Rich Internet Applications</li>
+                <li>POUR: Perceivable, Operable, Understandable, and Robust</li>
+                <li>ALT: Alternative Text</li>
+                <li>ADA: Americans with Disabilities Act</li>
+                <li>NVDA: NonVisual Desktop Access</li>
+                <li>JAWS: Job Access With Speech</li>
+                <li>UI: User Interface</li>
             </ul>
         </main>
     </body>        
