--- a/glossary.html
+++ b/glossary.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Glossary</title>
   <link rel="stylesheet" href="css/glossary-css.css">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
